--- a/babel.config.json
+++ b/babel.config.json
@@ -22,7 +22,8 @@
         [
           "@babel/plugin-transform-runtime",
           {
-            "corejs": 3
+            "corejs": 3,
+            "version": "^7.22.15"
           }
         ]
       ]
@@ -42,7 +43,8 @@
         [
           "@babel/plugin-transform-runtime",
           {
-            "corejs": 3
+            "corejs": 3,
+            "version": "^7.22.15"
           }
         ]
       ]
