--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Wrapper to use JSON.parse and JSON.stringify",
   "main": "index.js",
+  "types": "./dist/types/index.d.ts",
   "scripts": {
     "init:husky": "husky install",
     "init": "npm run init:husky",
