--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "json-serializer",
   "version": "1.0.0",
   "description": "Wrapper to use JSON.parse and JSON.stringify",
-  "main": "index.js",
+  "main": "./dist/cjs/index.js",
   "types": "./dist/types/index.d.ts",
   "exports": {
     "import": "./dist/esm/index.mjs",
