--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Wrapper to use JSON.parse and JSON.stringify",
   "main": "./dist/cjs/index.js",
+  "type": "commonjs",
   "types": "./dist/types/index.d.ts",
   "exports": {
     "import": "./dist/esm/index.mjs",
