--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jest": "^27.2.3",
+    "eslint-plugin-jsdoc": "^46.8.2",
     "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.3",
