--- a/babel.config.json
+++ b/babel.config.json
@@ -18,6 +18,7 @@
     },
     "buildCommonJS": {
       "presets": ["@babel/preset-env"],
+      "comments": false,
       "plugins": [
         [
           "@babel/plugin-transform-runtime",
@@ -39,6 +40,7 @@
           }
         ]
       ],
+      "comments": false,
       "plugins": [
         [
           "@babel/plugin-transform-runtime",
