--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "jest": "^29.6.4",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.3",
+    "prettier-plugin-jsdoc": "^1.0.2",
     "rimraf": "^5.0.1",
     "rollup": "^3.29.1",
     "typescript": "^5.2.2"
