--- a/package.json
+++ b/package.json
@@ -2,12 +2,20 @@
   "name": "json-serializer-core",
   "version": "1.0.0",
   "description": "Wrapper to use JSON.parse and JSON.stringify",
-  "main": "./dist/cjs/index.js",
+  "main": "./dist/cjs/index.cjs",
   "type": "commonjs",
-  "types": "./dist/types/index.d.ts",
+  "types": "./dist/types/index.d.cts",
   "exports": {
-    "import": "./dist/esm/index.mjs",
-    "require": "./dist/cjs/index.js"
+    ".": {
+      "import": {
+        "types": "./dist/types/index.d.mts",
+        "default": "./dist/esm/index.mjs"
+      },
+      "require": {
+        "types": "./dist/types/index.d.cts",
+        "default": "./dist/cjs/index.js"
+      }
+    }
   },
   "scripts": {
     "init:husky": "husky install",
