build: uso de npm script para usar lint-staged

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "build": "npm run build:tsc && npm run build:bundle && npm run build:clean-dist-tmp",
     "test": "jest --verbose",
     "commitlint": "npx commitlint --edit",
+    "lint-staged": "npx lint-staged",
     "quality-check": "npm run format && npm run lint && npm run test"
   },
   "repository": {
