--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     }
   },
   "scripts": {
+    "init:documentation": "npx readme-md-generator -y",
     "init:husky": "husky install",
-    "init": "npm run init:husky",
+    "init": "npm run init:husky && npm run init:documentation",
     "format": "prettier --check .",
     "format:fix": "prettier --write .",
     "format:build-stage": "prettier --check src",
