--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "test": "jest --verbose",
     "commitlint": "npx commitlint --edit",
     "lint-staged": "npx lint-staged",
+    "prepublishOnly": "npm run build",
     "quality-check": "npm run format && npm run lint && npm run test"
   },
   "repository": {
